# celine-ai-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.yaml  pyproject.toml  taskfile.yaml
app/: auth.py  docs_source.py  history.py  ingest.py  logging_.py  main.py  openai_stream.py  qdrant_setup.py  rag.py  routes.py  settings.py  uploads.py
frontend/: .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts
frontend/src/lib/components/: AttachmentChips.svelte  Button.svelte  ChatMessage.svelte  Composer.svelte  DropOverlay.svelte  Markdown.svelte  MessageList.svelte  TextInput.svelte  Topbar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/attachments/: +page.svelte
frontend/src/routes/history/: +page.svelte
src/celine/assistant/: auth.py  history.py  ingest.py  main.py  models.py  openai_vision.py  rag.py  routes.py  settings.py  uploads.py
